# polybook

./: .dockerignore  .env.arc  .env.example  .gitignore  DEV_GUIDE.md  DOCKER_GUIDE.md  ENV_CHANGES.md  ENV_SETUP.md  README.md  debug_domain.txt  debug_output.txt  docker-compose.yml  fresh_agents.md  package.json  pnpm-lock.yaml  polybook.code-workspace  repro_output.txt  skill.md
agent-gateway/: package.json  pnpm-lock.yaml
clob/: Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml
clob/src/: api_market.rs  api_token.rs  contracts.ts  executor.ts  index.ts  main.rs  matching-client.ts  orderbook.ts  types.ts
clob/src/clob/: engine.ts  index.ts
clob/src/scripts/: lp-provision.ts  prepare-condition.ts
clob/src/skills/: handler.ts
contracts/: foundry.toml
lifecycle-manager/: Dockerfile  factory.ts  index.ts  package-lock.json  package.json  registry.json  resolver.ts  syncer.ts
matching-engine/: Cargo.toml
mm-gateway/: .env.maker  .env.taker  .gitignore  Cargo.toml  Dockerfile  README.md  mm_log.txt
mm-gateway/src/: config.rs  event_listener.rs  inventory.rs  lib.rs  main.rs  orderbook_adapter.rs  quote_engine.rs  signer.rs  types.rs  utils.rs  yellow_client.rs  yellow_service.rs  yellow_signer.rs
mm-gateway/tests/: mm_integration.rs
orchestrator/: .env.example  lp_output.txt  package.json  pnpm-lock.yaml  polybook.code-workspace  tsconfig.json
polybook-daemon/: .env.example  .gitignore  package.json  pnpm-lock.yaml
scripts/: check-balances.ts  cli_dashboard.ts  cli_market_ui.ts  create_market.ts  create_persistent_market.ts  debug-math.ts  e2e-deorchestrated.ts  e2e-full.ts  e2e-grand-stork.ts  e2e-grand.ts  e2e-trade-clob.ts  e2e-trade.ts  execute_manual_trade.ts  fund_custody.ts  fund_mms.sh  fund_taker_gas.ts  get_yellow_assets.ts  lp-provision.ts  monitor_book.ts  orderbook_ws_client.ts  prepare-condition.ts  redeem.ts  register-market.ts  resolve.ts  (+10 more)
(+751 files in other folders)
