[package]
name = "polybook-clob"
version = "0.1.0"
edition = "2021"
description = "PolyBook matching engine using orderbook-rs"

[dependencies]
# High-performance orderbook from GitHub (uses main branch)
orderbook-rs = { git = "https://github.com/joaquinbejar/OrderBook-rs.git", branch = "main" }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# HTTP server for API
actix-web = "4"
actix-rt = "2"
actix = "0.13"
actix-web-actors = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID for order IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Concurrent map for trade capture
dashmap = "6"

# Ethereum interaction (Alloy)
alloy = { version = "0.8", features = ["full", "signer-local"] }
alloy-sol-types = "0.8"
hex = "0.4"
dotenv = "0.15"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
