[package]
name = "mm-gateway"
version = "0.1.0"
edition = "2021"
description = "Market Maker Gateway for PolyBook - Avellaneda-Stoikov based quoting"

[dependencies]
# Market making strategy (Avellaneda-Stoikov)
market-maker-rs = "0.3"

# Ethereum interaction (EIP-712 signing + chain queries)
alloy = { version = "0.8", features = ["full", "signer-local"] }
alloy-sol-types = "0.8"

# HTTP client for CLOB
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment configuration
dotenv = "0.15"

# Utilities
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
